--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1397,7 +1397,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string>keepsyms=1 swd_panic=1 alcid=66 igfxonln=1 -igfxcdc -igfxdvmt -wegnoegpu</string>
+				<string>keepsyms=1 swd_panic=1 alcid=66 igfxonln=1 -igfxcdc -igfxdvmt -wegnoegpu -noDC9</string>
 				<key>csr-active-config</key>
 				<data>AAAAAA==</data>
 				<key>prev-lang:kbd</key>
